# multi-server-MCP

./: .gitignore  README.md  calendar_server.py  client.py  foursquare.py  geoapify_places.py  krutrim_places.py  pyproject.toml  requirements.txt  server.py  server_config.json  test_calendar.py
